--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/primeng/resources/themes/arya-blue/theme.css';
+@import '../node_modules/primeicons/primeicons.css';
+@import '../node_modules/primeng/resources/primeng.min.css';
+@import '../node_modules/primeflex/primeflex.css';
+
+@import '../node_modules/bootstrap/dist/css/bootstrap.css';
+
+
+body {
+  background-color: var(--surface-b);
+  color: var(--text-color);
+}
