--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/*@import '../node_modules/primeng/resources/themes/bootstrap4-light-blue/theme.css';*/
 @import '../node_modules/primeng/resources/themes/arya-blue/theme.css';
 @import '../node_modules/primeicons/primeicons.css';
 @import '../node_modules/primeng/resources/primeng.min.css';
@@ -6,8 +7,107 @@
 
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 
+@import '../node_modules/quill/dist/quill.core.css';
+@import '../node_modules/quill/dist/quill.snow.css';
 
 body {
   background-color: var(--surface-b);
   color: var(--text-color);
+  font-family: var(--font-family);
+  overflow-y: scroll;
 }
+
+.card {
+  background-color: #1a2634 !important;
+  color: var(--text-color);
+}
+/*.card-title {*/
+/*  font-weight: 700;*/
+/*}*/
+
+
+/* for post-edit component
+    starts here */
+.p-editor-toolbar {
+  display: none;
+}
+.p-editor-content {
+  font-size: medium;
+}
+
+.ql-fill {
+  fill: #ffffff !important;
+}
+.ql-stroke {
+  stroke: #ffffff !important;
+}
+.ql-picker {
+  color: #ffffff !important;
+}
+.ql-picker-options {
+  background-color: #1a2634 !important;
+}
+/* ends */
+
+
+/* for post-detail component
+    starts here */
+pre {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  margin: 0;
+  overflow: auto;
+  overflow-y: hidden;
+  font-size: 12px;
+  line-height: 20px;
+  /*background: #efefef;*/
+  /*border: 1px solid #777;*/
+  background: var(--surface-b);
+  border: 1px solid var(--surface-b);
+  color: var(--text-color);
+  /*background: url(lines.png) repeat 0 0;*/
+}
+
+blockquote {
+  /*background: #f9f9f9;*/
+  /*color: #333333;*/
+  /*border-left: 10px solid #ccc;*/
+  background: var(--surface-d);
+  color: var(--text-color);
+  border-left: 10px solid var(--surface-c);
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+  white-space: pre-wrap;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.badge {
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.3;
+  color: #a7adb2;
+  padding: 0.25rem;
+}
+
+.tag-prefix {
+  opacity: 0.4;
+  font-weight: normal;
+}
+
+.badge-javascript {
+  background-color: #F7DF1E;
+  color: #000000;
+}
+
+.badge-angular {
+  background-color: #A9022A;
+  color: #ffffff;
+}
+/* ends */
+
