Changed type of password input

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
         <div class="card-text mb-2">
           <label for="password">Password</label>
           <div class="form-group">
-            <input pInputText id="password" formControlName="password" type="text" autocomplete="off" />
+            <input pInputText id="password" formControlName="password" type="password" autocomplete="off" />
           </div>
         </div>
 
