Cleaned up header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,18 +1,9 @@
 <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">Navbar</a>
+    <a class="navbar-brand" routerLink="/">Home</a>
 
     <div class="collapse navbar-collapse show" id="navbarDark">
       <ul class="navbar-nav mr-auto mb-2 mb-xl-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" routerLink="/" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
         <li class="nav-item">
           <button type="button" class="btn btn-primary" routerLink="/editor">Add new post</button>
         </li>
