Changed header view based on login status

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,22 +1,32 @@
 <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">Home</a>
-
-    <div class="collapse navbar-collapse show" id="navbarDark">
-      <ul class="navbar-nav mr-auto mb-2 mb-xl-0">
-        <li class="nav-item">
-          <button type="button" class="btn btn-primary" routerLink="/editor">Add new post</button>
-        </li>
-      </ul>
-
-      <form class="d-flex ml-auto">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
-
-
-    </div>
-
+  <div *ngIf="isLoginUrl; else notLoginUrl" class="d-flex mx-auto">
+    <a class="navbar-brand"
+       [style]="{'border-radius': '4px', 'width': '75px', 'text-align': 'center', color: '#000000',
+       backgroundColor: '#ffffff', fontWeight: '800'}"
+       routerLink="/"
+    >
+      LSDP
+    </a>
   </div>
+
+  <ng-template #notLoginUrl>
+    <a class="navbar-brand"
+       [style]="{'border-radius': '4px', 'width': '75px', 'text-align': 'center', color: '#000000',
+       backgroundColor: '#ffffff', fontWeight: '800'}"
+       routerLink="/"
+    >
+      LSDP
+    </a>
+
+    <button type="button" class="btn btn-primary mx-auto" routerLink="/editor">Add new post</button>
+
+    <button type="button" class="btn btn-primary" (click)="onLogOut()">Log out</button>
+
+    <!--      <form class="d-flex ml-auto">-->
+    <!--        <input class="form-control" type="search" placeholder="Search" aria-label="Search">-->
+    <!--        <button class="btn btn-outline-light" type="submit">Search</button>-->
+    <!--      </form>-->
+
+  </ng-template>
 
 </nav>
