Updated functionality of "Cancel" button: in edit mode -> navigate back to the specific post, in create mode -> navigate back to posts feed. Fixed how value of "tags" field is passed when patching value of existed post

--- a/src/app/components/post-edit/post-edit.component.html
+++ b/src/app/components/post-edit/post-edit.component.html
@@ -30,7 +30,7 @@
       </div>
 
       <button class="btn btn-primary" type="submit">{{editMode? 'Update post' : 'Create post'}}</button>
-      <button *ngIf="editMode" type="button" class="btn btn-danger float-right" (click)="onCancelEdit()">Cancel</button>
+      <button type="button" class="btn btn-danger float-right" (click)="onCancelEdit(editMode)">Cancel</button>
 
     </form>
   </div>
