--- a/src/styles.css
+++ b/src/styles.css
@@ -47,6 +47,9 @@ body {
 .ql-picker-options {
   background-color: #1a2634 !important;
 }
+.ql-active {
+  border: 1px solid #f893ff !important;
+}
 /* ends */
 
 
